# windows-lib-cpp-template

./: .clang-format  .gitignore  CMakeLists.txt  CMakeOptions.txt  CMakeUserPresets.json  DEVELOPMENT.md  NOTES.md  README.md  vcpkg.json
cmake/: docs.cmake  options.cmake  version.cmake  version.h.in
complexNumberLib-c/: CMakeLists.txt  CMakePresets.json  README.md
complexNumberLib-c/cmake/: mylibConfig.cmake.in  setup-windows.cmake  version.cmake
complexNumberLib-c/examples/complexNumberLib-consumer-c/: CMakeLists.txt  CMakeOptions.txt  README.md  main.c
complexNumberLib-c/include/: version.h
complexNumberLib-c/mylibLib/: CMakeLists.txt  ble.cpp  ble.hpp  complexNumbers.cpp  mylib.cpp  mylib.h  mylibImpl.cpp
docs/: Doxyfile.in
docs/userGuide/: index.md  installation.md  introduction.md  usage.md
example/consumer/: CMakeLists.txt
example/consumer/src/: CMakeLists.txt  ble.cpp  main.cpp
examples/mylib-consumer/: .clang-format  CMakeLists.txt  CMakePresets.json  DEVELOPMENT.md  README.md  vcpkg.json
examples/mylib-consumer-c/: .gitignore  CMakeLists.txt
examples/mylib-consumer-c/cmake/: copy-dlls.cmake
examples/mylib-consumer-c/src/: main.c
examples/mylib-consumer-cpp17-no_vcpkg/: CMakeLists.txt
examples/mylib-consumer-cpp17-no_vcpkg/src/: main.cpp
examples/mylib-consumer-cpp23-with_vcpkg/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  vcpkg.json
examples/mylib-consumer-cpp23-with_vcpkg/cmake/: copy-dlls.cmake  copy-dlls.md
examples/mylib-consumer-cpp23-with_vcpkg/src/: main.cpp
examples/mylib-consumer-python/: README.md  complex_test.py
examples/mylib-consumer-zig/: README.md
examples/mylib-consumer-zig/src/: main.zig
examples/mylib-consumer/src/: main.cpp
examples/mylib-consumer/test/: CMakeLists.txt  test_calc.cpp
generated_libs/complexNumber-cpp/include/mylibLib/: mylib.h  mylibImpl.hpp
generated_libs/complexNumber-cpp/lib/: mylib.lib
generated_libs/complexNumber-cpp/lib/cmake/mylib/: mylibConfig.cmake  mylibTargets-release.cmake  mylibTargets.cmake
include/: ble.h  calculator.h  ports.h  version.h
mylibLib/: CMakeLists.txt  ble.hpp  complexNumbers.hpp  mylib.cpp
src/: calculator.cpp  main.cpp  mqtt.cpp  ports.cpp  run_calc.cpp
